--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
   		<artifactId>commons-io</artifactId>
   		<version>2.4</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.jsoup</groupId>
+  		<artifactId>jsoup</artifactId>
+  		<version>1.8.2</version>
+  	</dependency>
   </dependencies>
   <url>http://telasi.ge</url>
 </project>
